# adventofcode2021

./: README.md  pyproject.toml
1/: 1.py
2/: 2.py
3/: 3.py
6/: 6.py
7/: 7.py
8/: 8.py
